# bbfcapi

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
bbfcapi/: api.py  api_async.py  api_sync.py  apilib.py  apis.py  apiweb.py  app.py  client.py  client_async.py  client_common.py  client_sync.py  lib.py  lib_async.py  libs.py  parser.py  types.py  urls.py
docs/: nginx.conf  systemd.service
tests/: conftest.py  fake_bbfc.py  test_api.py  test_api_sync.py  test_apilib.py  test_apis.py  test_apiweb.py  test_app.py  test_bbfcapi.py  test_client.py  test_client_async.py  test_lib.py  test_lib_async.py  test_parser.py
tests/data/: search_12a.html  search_a_silent_voice.json  search_interstellar.html  search_interstellar.json  search_no_film.json  search_no_results.html
