[tool.poetry]
name = "bbfcapi"
version = "2.0.2"
description = "API service, library and parser for BBFC"
homepage = "https://github.com/Fustra/bbfcapi/"
repository = "https://github.com/Fustra/bbfcapi/"
readme = "README.md"
authors = ["QasimK <noreply@QasimK.io>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = {version = "^3.6", extras = ["speedups"], optional = true}
beautifulsoup4 = {version = "^4.8", optional = true}
fastapi = {version = "^0.52", optional = true}
pydantic = "^1.4"
pyhumps = {version = "^1.3.1", optional = true}
requests = {version = "^2.23", optional = true}
uvicorn = {version = "^0.11", optional = true}

[tool.poetry.dev-dependencies]
# Checks
pyflakes = "^2.1"
bandit = "^1.6"
safety = "^1.8"
black = {version = "=19.10b0", allow-prereleases = true}
isort = "^4.3"
# Tests
pytest = "^5.0"
pytest-asyncio = "^0.10.0"
aioresponses = "^0.6.1"
responses = "^0.10.12"

[tool.poetry.extras]
client = ["aiohttp"]
clients = ["requests"]
parser = ["beautifulsoup4"]
lib = ["aiohttp", "beautifulsoup4"]
libs = ["requests", "beautifulsoup4"]
api = ["aiohttp", "pyhumps"]
apis = ["requests", "pyhumps"]
app = [ "uvicorn", "fastapi", "pyhumps","aiohttp", "beautifulsoup4"]

[tool.black]
target-version = ["py38"]

[build-system]
requires = ["poetry>=1.02"]
build-backend = "poetry.masonry.api"
