[tool.poetry]
name = "bbfcapi"
version = "3.0.1"
description = "API service, library and parser for BBFC"
homepage = "https://github.com/Fustra/bbfcapi/"
repository = "https://github.com/Fustra/bbfcapi/"
readme = "README.md"
authors = ["QasimK <noreply@QasimK.io>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = {version = "^3.6", extras = ["speedups"], optional = true}
fastapi = {version = "^0.63.0", optional = true}
pydantic = "^1.4"
pyhumps = {version = "^1.3.1", optional = true}
requests = {version = "^2.24", optional = true}
uvicorn = {version = "^0.13.4", optional = true}

[tool.poetry.dev-dependencies]
# Checks
pyflakes = "^2.2.0"
bandit = "^1.6.2"
safety = "^1.9.0"
black = {version = "=20.8b1", allow-prereleases = true}
isort = "^5.6.4"
# Tests
pytest = "^6.1.2"
pytest-asyncio = "^0.14.0"
aioresponses = "^0.7.1"
responses = "^0.12.0"

[tool.poetry.extras]
client_async = ["aiohttp"]
client_sync = ["requests"]
lib_async = ["aiohttp"]
lib_sync = ["requests"]
app = ["uvicorn", "fastapi", "pyhumps", "aiohttp"]
api_async = ["aiohttp", "pyhumps"]
api_sync = ["requests", "pyhumps"]
all = ["uvicorn", "requests", "fastapi", "pyhumps", "aiohttp"]

[tool.black]
target-version = ["py38"]

[build-system]
requires = ["poetry>=1.02"]
build-backend = "poetry.masonry.api"
